# backend/src/app.js
@@ -13,6 +13,7 @@ const study_group = require('./study_group');
 const profile = require('./profile');
 const classes = require('./classes');
 const friends = require('./friends');
+const images = require('./images');
 
 const { checkAuth } = require('./auth'); 
 
@@ -77,6 +78,11 @@ app.post('/v0/group/:id/join', checkAuth, study_group.joinGroup);
 app.delete('/v0/group/:id/leave', checkAuth, study_group.leaveGroup);
 
 app.get('/v0/messages/:id/', checkAuth, study_group.getMessages);
+
+app.get('/v0/profile/:id/image', checkAuth, images.getImage);
+app.get('/v0/group/:id/image', checkAuth, images.getImage);
+app.put('/v0/profile/:id/image', checkAuth, images.upload, images.uploadNewImage);
+app.put('/v0/group/:id/image', checkAuth, images.upload, images.uploadNewImage);
 
 // ---------- Error Handling ----------
 app.use((err, req, res, next) => {
